Add Pusher real-time chat integration, robots.txt, and sitemap.xml
- Implemented Pusher integration for real-time messaging in conversations.
- Added a new JavaScript file `pusher-chat.js` to handle Pusher configuration, initialization, and subscription to conversation channels.
- Created `robots.txt` to manage web crawler access and disallow specific directories.
- Added `sitemap.xml` to improve SEO and provide a structured list of site URLs.

--- a/privacy-en.html
+++ b/privacy-en.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Letshare</title>
-    <link rel="stylesheet" href="css/legal.css">
+    <title>Privacy Policy - Letshare</title>    <link rel="icon" type="image/svg+xml" href="favicon.svg">    <link rel="stylesheet" href="css/legal.css">
     <script src="js/legal.js"></script>
 </head>
 <body>
     <div class="container">
-        <a href="settings.html" class="back-link">← Back</a>
+        <a href="#" onclick="goBack(); return false;" class="back-link">← Back</a>
         
         <h1>🔒 Privacy Policy</h1>
         <p class="subtitle">Effective Date: January 12, 2026 (v1.0)</p>
