--- a/privacy.html
+++ b/privacy.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Politique de confidentialité - Letshare</title>
-    <link rel="stylesheet" href="css/legal.css">
+    <title>Politique de confidentialité - Letshare</title>    <link rel="icon" type="image/svg+xml" href="favicon.svg">    <link rel="stylesheet" href="css/legal.css">
     <script src="js/legal.js"></script>
 </head>
 <body>
     <div class="legal-container">
-        <a href="settings.html" class="back-btn">
+        <a href="#" onclick="goBack(); return false;" class="back-btn">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M19 12H5M12 19l-7-7 7-7"></path>
             </svg>
