--- a/settings.html
+++ b/settings.html
@@ -7,6 +7,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Settings - LetShare</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="css/settings.css?v=20260112">
     <style>
         /* Force l'application des styles personnalisés */
@@ -488,7 +489,6 @@
     <script src="js/translations.js"></script>
     <script src="js/api.js"></script>
     <script src="js/push-notifications.js"></script>
-    <script src="js/settings.js"></script>
 </body>
 </html>
 
