--- a/terms-en.html
+++ b/terms-en.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Service - Letshare</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="css/legal.css">
     <script src="js/legal.js"></script>
 </head>
 <body>
     <div class="container">
-        <a href="settings.html" class="back-link">← Back</a>
+        <a href="#" onclick="goBack(); return false;" class="back-link">← Back</a>
         
         <h1>📋 Terms of Service</h1>
         <p class="subtitle">Effective Date: January 12, 2026 (v1.0)</p>
